--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
       
      
         <nav class="topnav">
-          <a href="giftcards.html" class="topnav">Giftcard</a>
+          <a href="giftcard.html" class="topnav">Giftcard</a>
           <a href="reservations.html" class="topnav">Reservations</a>
           <a href="hours.html" class="topnav">Hours</a>
           <a href="contact.html" class="topnav">Contact</a>
