--- a/reservations.html
+++ b/reservations.html
@@ -13,7 +13,7 @@
         <h1>Haukai Restaurant</h1>
       
         <nav class="topnav">
-          <a href="giftcards.html" class="topnav">Giftcard</a>
+          <a href="giftcard.html" class="topnav">Giftcard</a>
           <a href="hours.html" class="topnav">Hours</a>
           <a href="contact.html" class="topnav">Contact</a>
           <a href="menu.html" class="topnav">Menu</a>
