--- a/hours.html
+++ b/hours.html
@@ -14,7 +14,7 @@
     <header class="header">
       <h1>Haukai Restaurant</h1>
       <nav class="topnav">
-        <a href="giftcards.html" class="topnav">Giftcard</a>
+        <a href="giftcard.html" class="topnav">Giftcard</a>
         <a href="reservations.html" class="topnav">Reservations</a>
         <a href="contact.html" class="topnav">Contact</a>
         <a href="menu.html" class="topnav">Menu</a>
